# OpenGL_1st_project

./: CMakeLists.txt  README.md
OpenGL_triangle_draw/: readme.md
src/: config.cpp  config.h  main.cpp
src/shaders/: fragment.txt
